corrected syntax for responsive layout. Modified space per feedback received from peer review by using alt/shift/f

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,7 +11,7 @@ header {
     background-color: #bbd9e2;
     color: rgb(19, 18, 18);
     background-color: #c2e0e9;
-    box-sizing: content-box;    
+    box-sizing: content-box;
     display: flex;
     justify-content: left;
     align-items: center;
@@ -21,7 +21,7 @@ header {
 
 header img {
     margin-left: 25px;
-    margin-bottom: 15px;    
+    margin-bottom: 15px;
     width: 95%;
     max-width: 300px;
     max-height: 75;
@@ -35,13 +35,14 @@ footer {
     width: 100%;
     height: 175px;
     background-color: #A8D5E3;
-    box-sizing: border-box;    
+    box-sizing: border-box;
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
     justify-content: center;
     max-width: 100%;
 }
+
 .container {
     width: 80%;
     margin: auto;
@@ -54,7 +55,7 @@ footer {
     padding: 1em;
 }
 
-container2 {
+.container2 {
     width: 80%;
     margin: auto;
     padding: 1em;
@@ -90,6 +91,7 @@ h2 {
     position: relative;
     display: inline-block;
 }
+
 .dropbtn {
     background-color: #ffffff;
     color: rgb(0, 0, 0);
@@ -99,6 +101,7 @@ h2 {
     border: none;
     cursor: pointer;
 }
+
 .dropbtn:hover {
     background-color: #ECA427;
 }
@@ -202,19 +205,22 @@ section {
 
 /* Responsive Layout */
 @media (max-width: 768px) {
-    .bio-card, .header-img, {
+    .bio-card,
+    .header-img {
         width: 100%;
     }
 }
 
 @media (min-width: 769px) and (max-width: 1024px) {
-    .bio-card, .header-img, {
+    .bio-card,
+    .header-img {
         width: calc(45% - 20px);
     }
 }
 
 @media (min-width: 1025px) {
-    .bio-card, .header-img, {
+    .bio-card,
+    .header-img {
         width: calc(25% - 15px);
     }
 }
